<resources>

    <string name="app_name">Toque\'d</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main_menu">Toque\'d</string>
    <string name="title_activity_refrigerator">Refrigerator</string>
    <string name="recipe_book">Recipe Book</string>
    <string name="recipe_book_text">Recipes!</string>
    <string name="recipe_book_new">New recipe</string>
    <string name="recipe_book_edit">Edit recipe</string>
    <string name="recipe_book_delete">Delete recipe</string>
    <string name="recipe_book_start_title">Recipe Name: </string>
    <string name="recipe_book_start_prep">Prep Time: </string>
    <string name="recipe_book_start_serves">Serves: </string>
    <string name="recipe_book_start_ingredients">Ingredients: </string>
    <string name="recipe_book_add_comment">Add comment</string>
    <string name="recipe_book_comments">Add a comment about this recipe</string>
    <string name="recipe_book_meal_start">Meal recipes: </string>
    <string name="menu_help">Help!</string>
    <string name="menu_help_title">Help me use Toque\'d</string>
    <string name="menu_about">About Toque\'d</string>
    <string name="refrigerator">Refrigerator</string>
    <string name="fridge_shelf">Shelf</string>
    <string name="fridge_list">List</string>
    <string name="fridge_menu_start">Welcome to the Fridge</string>
    <string name="fridge_add_item">Add Item</string>
    <string name="fridge_delete_item">Delete Item</string>
    <string name="fridge_item_name">Item Name</string>
    <string name="fridge_item_quantity">Quantity</string>
    <string name="fridge_item_unit">Unit</string>
    <string name="fridge_item_start">Add a new item</string>
    <string name="fridge_item_comments">Add a comment about this item</string>
    <string name="fridge_item_comment_button">Add comment</string>
    <string name="fridge_shelf_title">Shelf contains:</string>
    <string name="fridge_list_title">List contains:</string>
    <string name="stove">Stove</string>
    <string name="stove_menu_search_by">Search By:</string>
    <string name="stove_menu_meal">Meal</string>
    <string name="stove_menu_item">Item</string>
    <string name="stove_menu_random">Random!</string>
    <string name="stove_menu_meal_selection">What meal?</string>
    <string name="stove_menu_meal_breakfast">Breakfast</string>
    <string name="stove_menu_meal_lunch">Lunch</string>
    <string name="stove_menu_meal_dinner">Dinner</string>
    <string name="stove_menu_meal_dessert">Dessert</string>
    <string name="stove_menu_meal_snack">Quick Snack</string>
    <string name="stove_menu_meal_item_select">Select filter criteria</string>
    <string name="stove_menu_meal_item_add">Add another item</string>
    <string name="title_activity_stove">Stove</string>
    <string name="title_activity_recipe_book">RecipeBook</string>
    <string name="title_activity_refrigerator_item">RefrigeratorItem</string>
    <string name="title_activity_recipe_book_start">RecipeBookStart</string>
    <string name="title_activity_recipe_book_end">RecipeBookEnd</string>
    <string name="title_activity_about_toqued">About Toque\'d</string>
    <string name="button_next">Next</string>
    <string name="button_prev">Prev</string>
    <string name="button_restart">Restart</string>
    <string name="about_toqued">Toque\'d, a colloquialism formed from the combination of Toque (a traditional chef\'s hat) and the suffix \"-ed\", similar in style to MTV\'s \"Punk\'d\" where the user is involved in some process that they don\'t know is going on, is an easy to use meal planning and cooking tool, suited particularly towards the culinarily uninclined, who can learn to cook without knowing that they are learning the process.</string>
    <string name="help_toqued">Toque\'d has three main components:\n\n1) The refirgerator, which stores ingredients and list of ingredients to buy\n\n2) The stove, which enables users to cook recipes from items on hand\n\n3) The recipe book, which enables users to manage recipes currently available or create new ones.\n\nClick on one of these options to begin using Toque\'d!</string>
    <string name="title_activity_help_toqued">Toque\'d Help</string>
    <string name="about_menu_done_button">Back home</string>
    <string name="help_menu_done_button">Get cooking!</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="dessert">Dessert</string>
    <string name="snack">Snack</string>
    <string name="all_meals">All</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="done">Done</string>
    <string name="item">Ingredient</string>
    <string name="num_servings">Number of servings</string>
    <string name="prep_time">Preparation time</string>
    <string name="rating">Rating</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="recipe_selection">Select an action</string>
    <string name="recipe_add">Add new recipe</string>
    <string name="recipe_edit">Edit existing recipe</string>
    <string name="recipe_delete">Delete old recipe</string>
    <string name="item_selection">Select an action</string>
    <string name="item_add">Add new item</string>
    <string name="item_edit">Edit existing item</string>
    <string name="item_delete">Delete old item</string>
    <string name="delete_item_confirm">Confirm</string>
    <string name="delete_item_string_format">Are you sure you want to delete %s?</string>
    <string name="fridge_edit_item_format">Edit %s</string>
    <string name="tablespoon">T.</string>
    <string name="teaspoon">t.</string>
    <string name="cup">C.</string>
    <string name="quart">qt.</string>
    <string name="fluid_ounce">fl oz.</string>
    <string name="pint">pt.</string>
    <string name="gallon">gal.</string>
    <string name="fahrenheit">F</string>
    <string name="milliliter">mL</string>
    <string name="liter">L</string>
    <string name="gram">g</string>
    <string name="kilogram">kg</string>
    <string name="celsius">C</string>
    <string name="box">box</string>
    <string name="bag">bag</string>
    <string name="can">can</string>
    <string name="empty"></string>
    <string name="second">second</string>
    <string name="minute">minute</string>
    <string name="hour">hour</string>
    <string name="day">day</string>
    <string name="title_activity_recipe_view">RecipeViewActivity</string>
    <string name="recipe_instruction_format">Instructions: %s</string>
    <string name="recipe_instruction_start">"Instruction: "</string>
    <string name="recipe_title_start">"Title: "</string>
    <string name="recipe_title_format">"Title: %s"</string>
    <string name="recipe_ingredients_start">"Ingredients: "</string>
    <string name="recipe_ingredients_format">"Ingredients: %s"</string>
    <string name="title_activity_recipe_edit">RecipeEditActivity</string>
    <string name="key_recipe_id">KEY_RECIPE_ID</string>
    <string name="random">RANDOM</string>
    <string name="item_swap">Swap location</string>
    <string name="swap_item_shelf_string_format">Swap %s to Shelf?</string>
    <string name="swap_item_list_string_format">Swap %s to List?</string>
    <string name="add_ingredient">Add Ingredient</string>
    <string name="view_ingredients">View Ingredients</string>
    <string name="add_a_recipe_dialog_title">Add a recipe</string>
    <string name="create_recipe">Create recipe</string>
    <string name="recipe_name">Recipe name</string>
    <string name="preparation_time">Preparation time</string>
    <string name="servings">Servings</string>
    <string name="save_recipe">Save recipe</string>
    <string name="edit_ingredients">Edit ingredients</string>

</resources>