<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ImageView
                android:id="@+id/recipe_image_view_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_launcher" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1" 
        android:padding="10dp">
        
        <EditText
            android:id="@+id/title_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/recipe_title_start"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/ingredients_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/recipe_ingredients_start"
            android:textSize="18sp" />
        
        <EditText
            android:id="@+id/instruction_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/recipe_instruction_start"
            android:textSize="18sp" />

    </LinearLayout>
    
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/edit_previous_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_prev"
                android:layout_gravity="left"
                android:layout_weight="1" />

            <Button
                android:id="@+id/edit_next_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_next" 
                android:layout_gravity="right"
                android:layout_weight="1"/>

        </LinearLayout>

</LinearLayout>

