<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/app_name"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center" >

        <ImageButton
            android:id="@+id/fridge_image_button"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:background="@null"
            android:contentDescription="@string/app_name"
            android:src="@drawable/refrigerator_icon_150" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:text="@string/refrigerator"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/stove_image_button"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:background="@null"
            android:contentDescription="@string/app_name"
            android:src="@drawable/stove_icon_150" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:text="@string/stove"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/recipe_image_button"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:background="@null"
            android:contentDescription="@string/app_name"
            android:src="@drawable/recipebook_icon_150" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/recipe_book"
            android:textSize="20sp" />
    </LinearLayout>

<!--     <LinearLayout -->
<!--         android:layout_width="match_parent" -->
<!--         android:layout_height="match_parent" -->
<!--         android:gravity="bottom" > -->

<!--         <Button -->
<!--             android:id="@+id/menu_about_button" -->
<!--             android:layout_width="wrap_content" -->
<!--             android:layout_height="wrap_content" -->
<!--             android:text="@string/menu_about" -->
<!--             android:layout_weight="1"/> -->

<!--         <Button -->
<!--             android:id="@+id/menu_help_button" -->
<!--             android:layout_width="wrap_content" -->
<!--             android:layout_height="wrap_content" -->
<!--             android:text="@string/menu_help" -->
<!--             android:layout_weight="2" /> -->

<!--     </LinearLayout> -->

</LinearLayout>
